# core-commerce-monolith

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/auth/: interfaces.py
app/auth/api/v1/: router.py
app/auth/jwt/: jwt.py
app/auth/models/: user.py
app/auth/schemas/: auth.py
app/auth/services/: auth_service.py
app/shared/cache/: otp_cache.py  otp_rate_limiter.py  redis_client.py
app/shared/core/: config.py  exceptions.py  security.py
app/shared/db/: session.py
app/shared/events/infra/: rabbitmq.py
app/shared/events/publishers/: sms_publisher.py
app/shared/events/services/: idempotency.py  retry_handler.py  sms_service.py
app/shared/events/workers/: sms_worker.py
app/shared/utils/: loggers.py  otp_generator.py
